compiler/agentspeak/mas2j/MAS2JavaParser.py
# Generated from MAS2Java.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MAS2JavaParser ( Parser ):

    grammarFileName = "MAS2Java.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MAS'", "'{'", "'}'", "'infrastructure'", 
                     "':'", "'environment'", "'['", "']'", "','", "'('", 
                     "')'", "'executionControl'", "'at'", "'agent_defaults'", 
                     "'agents'", "'#'", "';'", "'agentArchClass'", "'beliefBaseClass'", 
                     "'agentClass'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "FILENAME", "STRING", "ID", 
                      "WS", "LC", "BC" ]

    RULE_mas = 0
    RULE_infrastructure = 1
    RULE_environment = 2
    RULE_parameters = 3
    RULE_parameter_list = 4
    RULE_parameter = 5
    RULE_exec_control = 6
    RULE_agent_defaults = 7
    RULE_agents = 8
    RULE_agent = 9
    RULE_agt_options = 10
    RULE_agt_arch_class = 11
    RULE_agt_belief_base_class = 12
    RULE_agt_class = 13
    RULE_agt_at = 14

    ruleNames =  [ "mas", "infrastructure", "environment", "parameters", 
                   "parameter_list", "parameter", "exec_control", "agent_defaults", 
                   "agents", "agent", "agt_options", "agt_arch_class", "agt_belief_base_class", 
                   "agt_class", "agt_at" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    NUMBER=21
    FILENAME=22
    STRING=23
    ID=24
    WS=25
    LC=26
    BC=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def agents(self):
            return self.getTypedRuleContext(MAS2JavaParser.AgentsContext,0)


        def infrastructure(self):
            return self.getTypedRuleContext(MAS2JavaParser.InfrastructureContext,0)


        def environment(self):
            return self.getTypedRuleContext(MAS2JavaParser.EnvironmentContext,0)


        def exec_control(self):
            return self.getTypedRuleContext(MAS2JavaParser.Exec_controlContext,0)


        def agent_defaults(self):
            return self.getTypedRuleContext(MAS2JavaParser.Agent_defaultsContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_mas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMas" ):
                listener.enterMas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMas" ):
                listener.exitMas(self)




    def mas(self):

        localctx = MAS2JavaParser.MasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(MAS2JavaParser.T__0)
            self.state = 31
            self.match(MAS2JavaParser.ID)
            self.state = 32
            self.match(MAS2JavaParser.T__1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__3:
                self.state = 33
                self.infrastructure()


            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__5:
                self.state = 36
                self.environment()


            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__11:
                self.state = 39
                self.exec_control()


            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__13:
                self.state = 42
                self.agent_defaults()


            self.state = 45
            self.agents()
            self.state = 46
            self.match(MAS2JavaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InfrastructureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def getRuleIndex(self):
            return MAS2JavaParser.RULE_infrastructure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfrastructure" ):
                listener.enterInfrastructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfrastructure" ):
                listener.exitInfrastructure(self)




    def infrastructure(self):

        localctx = MAS2JavaParser.InfrastructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_infrastructure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(MAS2JavaParser.T__3)
            self.state = 49
            self.match(MAS2JavaParser.T__4)
            self.state = 50
            self.match(MAS2JavaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvironmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def STRING(self):
            return self.getToken(MAS2JavaParser.STRING, 0)

        def parameters(self):
            return self.getTypedRuleContext(MAS2JavaParser.ParametersContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_environment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironment" ):
                listener.enterEnvironment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironment" ):
                listener.exitEnvironment(self)




    def environment(self):

        localctx = MAS2JavaParser.EnvironmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_environment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(MAS2JavaParser.T__5)
            self.state = 53
            self.match(MAS2JavaParser.T__4)
            self.state = 54
            self.match(MAS2JavaParser.ID)
            self.state = 55
            self.match(MAS2JavaParser.STRING)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__6:
                self.state = 56
                self.parameters()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_list(self):
            return self.getTypedRuleContext(MAS2JavaParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = MAS2JavaParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameters)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(MAS2JavaParser.T__6)
                self.state = 60
                self.parameter_list()
                self.state = 61
                self.match(MAS2JavaParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(MAS2JavaParser.T__6)
                self.state = 64
                self.match(MAS2JavaParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAS2JavaParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MAS2JavaParser.ParameterContext,i)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)




    def parameter_list(self):

        localctx = MAS2JavaParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.parameter()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MAS2JavaParser.T__8:
                self.state = 68
                self.match(MAS2JavaParser.T__8)
                self.state = 69
                self.parameter()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def NUMBER(self):
            return self.getToken(MAS2JavaParser.NUMBER, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(MAS2JavaParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = MAS2JavaParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(MAS2JavaParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.match(MAS2JavaParser.T__5)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(MAS2JavaParser.NUMBER)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.match(MAS2JavaParser.ID)
                self.state = 79
                self.match(MAS2JavaParser.T__9)
                self.state = 80
                self.parameter_list()
                self.state = 81
                self.match(MAS2JavaParser.T__10)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.match(MAS2JavaParser.T__9)
                self.state = 84
                self.parameter_list()
                self.state = 85
                self.match(MAS2JavaParser.T__10)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.match(MAS2JavaParser.T__6)
                self.state = 88
                self.parameter_list()
                self.state = 89
                self.match(MAS2JavaParser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exec_controlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MAS2JavaParser.ID)
            else:
                return self.getToken(MAS2JavaParser.ID, i)

        def getRuleIndex(self):
            return MAS2JavaParser.RULE_exec_control

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExec_control" ):
                listener.enterExec_control(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExec_control" ):
                listener.exitExec_control(self)




    def exec_control(self):

        localctx = MAS2JavaParser.Exec_controlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exec_control)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(MAS2JavaParser.T__11)
            self.state = 94
            self.match(MAS2JavaParser.T__4)
            self.state = 95
            self.match(MAS2JavaParser.ID)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__12:
                self.state = 96
                self.match(MAS2JavaParser.T__12)
                self.state = 97
                self.match(MAS2JavaParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Agent_defaultsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(MAS2JavaParser.ParametersContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agent_defaults

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgent_defaults" ):
                listener.enterAgent_defaults(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgent_defaults" ):
                listener.exitAgent_defaults(self)




    def agent_defaults(self):

        localctx = MAS2JavaParser.Agent_defaultsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_agent_defaults)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MAS2JavaParser.T__13)
            self.state = 101
            self.match(MAS2JavaParser.T__4)
            self.state = 102
            self.parameters()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def agent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAS2JavaParser.AgentContext)
            else:
                return self.getTypedRuleContext(MAS2JavaParser.AgentContext,i)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agents

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgents" ):
                listener.enterAgents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgents" ):
                listener.exitAgents(self)




    def agents(self):

        localctx = MAS2JavaParser.AgentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_agents)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MAS2JavaParser.T__14)
            self.state = 105
            self.match(MAS2JavaParser.T__4)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.agent()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MAS2JavaParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def FILENAME(self):
            return self.getToken(MAS2JavaParser.FILENAME, 0)

        def agt_options(self):
            return self.getTypedRuleContext(MAS2JavaParser.Agt_optionsContext,0)


        def agt_arch_class(self):
            return self.getTypedRuleContext(MAS2JavaParser.Agt_arch_classContext,0)


        def agt_belief_base_class(self):
            return self.getTypedRuleContext(MAS2JavaParser.Agt_belief_base_classContext,0)


        def agt_class(self):
            return self.getTypedRuleContext(MAS2JavaParser.Agt_classContext,0)


        def NUMBER(self):
            return self.getToken(MAS2JavaParser.NUMBER, 0)

        def agt_at(self):
            return self.getTypedRuleContext(MAS2JavaParser.Agt_atContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgent" ):
                listener.enterAgent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgent" ):
                listener.exitAgent(self)




    def agent(self):

        localctx = MAS2JavaParser.AgentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_agent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(MAS2JavaParser.ID)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.FILENAME:
                self.state = 112
                self.match(MAS2JavaParser.FILENAME)


            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__6:
                self.state = 115
                self.agt_options()


            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__17:
                self.state = 118
                self.agt_arch_class()


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__18:
                self.state = 121
                self.agt_belief_base_class()


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__19:
                self.state = 124
                self.agt_class()


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__15:
                self.state = 127
                self.match(MAS2JavaParser.T__15)
                self.state = 128
                self.match(MAS2JavaParser.NUMBER)


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MAS2JavaParser.T__12:
                self.state = 131
                self.agt_at()


            self.state = 134
            self.match(MAS2JavaParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Agt_optionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self):
            return self.getTypedRuleContext(MAS2JavaParser.ParametersContext,0)


        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agt_options

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgt_options" ):
                listener.enterAgt_options(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgt_options" ):
                listener.exitAgt_options(self)




    def agt_options(self):

        localctx = MAS2JavaParser.Agt_optionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_agt_options)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.parameters()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Agt_arch_classContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agt_arch_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgt_arch_class" ):
                listener.enterAgt_arch_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgt_arch_class" ):
                listener.exitAgt_arch_class(self)




    def agt_arch_class(self):

        localctx = MAS2JavaParser.Agt_arch_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_agt_arch_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MAS2JavaParser.T__17)
            self.state = 139
            self.match(MAS2JavaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Agt_belief_base_classContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agt_belief_base_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgt_belief_base_class" ):
                listener.enterAgt_belief_base_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgt_belief_base_class" ):
                listener.exitAgt_belief_base_class(self)




    def agt_belief_base_class(self):

        localctx = MAS2JavaParser.Agt_belief_base_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_agt_belief_base_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MAS2JavaParser.T__18)
            self.state = 142
            self.match(MAS2JavaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Agt_classContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agt_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgt_class" ):
                listener.enterAgt_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgt_class" ):
                listener.exitAgt_class(self)




    def agt_class(self):

        localctx = MAS2JavaParser.Agt_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_agt_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(MAS2JavaParser.T__19)
            self.state = 145
            self.match(MAS2JavaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Agt_atContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MAS2JavaParser.ID, 0)

        def getRuleIndex(self):
            return MAS2JavaParser.RULE_agt_at

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgt_at" ):
                listener.enterAgt_at(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgt_at" ):
                listener.exitAgt_at(self)




    def agt_at(self):

        localctx = MAS2JavaParser.Agt_atContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_agt_at)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(MAS2JavaParser.T__12)
            self.state = 148
            self.match(MAS2JavaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





